peac_dev/force-app/main/default/objects/Auto_Follow_Up__c/Auto_Follow_Up__c.object-meta.xml
<CustomObject>
    <label>Auto Follow-Up</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Auto Follow Up Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Auto Follow-Ups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>