peac_dev/force-app/main/default/objects/Auto_Follow_Up__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <inlineHelpText>The campaign that this auto follow-up step is related to.</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Auto Follow-Ups</relationshipLabel>
    <relationshipName>Auto_Follow_Ups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>