peac_dev/force-app/main/default/objects/Auto_Follow_Up__c/fields/DefaultDaysUntilNextFollowup__c.field-meta.xml
<CustomField>
    <fullName>DefaultDaysUntilNextFollowup__c</fullName>
    <defaultValue>2</defaultValue>
    <inlineHelpText>What&apos;re the default number of days until the next follow up? This will be used in calculating the follow up date</inlineHelpText>
    <label>Default Days Until Next Follow-up</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>