peac_dev/force-app/main/default/objects/Auto_Follow_Up__c/fields/DefaultHoursUntilNextFollowUp__c.field-meta.xml
<CustomField>
    <fullName>DefaultHoursUntilNextFollowUp__c</fullName>
    <defaultValue>48</defaultValue>
    <description>SAL-2036</description>
    <inlineHelpText>This field indicates the number of hours that will occur before the next auto follow up activity</inlineHelpText>
    <label>Default Hours Until Next Follow-Up</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>