peac_dev/force-app/main/default/objects/Auto_Follow_Up__c/fields/PreviousAutoFollowUp__c.field-meta.xml
<CustomField>
    <fullName>PreviousAutoFollowUp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The previous step in the auto follow up chain</inlineHelpText>
    <label>Previous Auto Follow-Up</label>
    <referenceTo>Auto_Follow_Up__c</referenceTo>
    <relationshipLabel>Auto Follow-Ups</relationshipLabel>
    <relationshipName>Previous_Auto_Follow_Ups</relationshipName>
    <type>Lookup</type>
</CustomField>