peac_dev/force-app/main/default/objects/Auto_Follow_Up__c/fields/StepNumber__c.field-meta.xml
<CustomField>
    <fullName>StepNumber__c</fullName>
    <inlineHelpText>The step in the auto follow up sequence</inlineHelpText>
    <label>Step Number</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>