peac_dev/force-app/main/default/objects/Auto_Follow_Up__c/fields/TaskComment__c.field-meta.xml
<CustomField>
    <fullName>TaskComment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The comments that will appear on the follow up task</inlineHelpText>
    <label>Task Comment</label>
    <type>TextArea</type>
</CustomField>