peac_dev/force-app/main/default/objects/Auto_Follow_Up__c/fields/TaskSubject__c.field-meta.xml
<CustomField>
    <fullName>TaskSubject__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What should the follow up task be set to?</inlineHelpText>
    <label>Task Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>