peac_dev/force-app/main/default/objects/Auto_Follow_Up__c/fields/TempSBId__c.field-meta.xml
<CustomField>
    <fullName>TempSBId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Temp SB Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>